# Rune

./: .gitignore  CMakeLists.txt  README.md
Rune/: CMakeLists.txt
Rune/include/Rune/: Rune.h
Rune/include/application/: application.h
Rune/src/: CMakeLists.txt  main.cpp
Rune/src/Rune/: Rune.h
Rune/src/application/: CMakeLists.txt  app_config.hh  application.cc  application.cpp  application.h  application.hh
Rune/src/core/: CMakeLists.txt  logger.hh
Rune/src/core/logger/: logger.hh
Rune/src/core/memory/: deletion_stack.cc  deletion_stack.hh
Rune/src/platform/: CMakeLists.txt  window.cc  window.hh
Rune/src/renderer/: CMakeLists.txt  gui.cc  gui.hh  render_backend.cc  render_backend.hh  renderer.cc  renderer.hh
Rune/src/renderer/opengl-renderer/: CMakeLists.txt  backend.cc  backend.hh
Rune/src/renderer/opengl-renderer/shaders/: CMakeLists.txt  default.frag  default.vert
Rune/src/renderer/shaders/: CMakeLists.txt  shader.comp
Rune/src/renderer/vulkan/: CMakeLists.txt  backend.cc  backend.hh
Rune/src/renderer/vulkan-renderer/: CMakeLists.txt  backend.cc  backend.hh  bootstrap.hh  structs.hh
Rune/src/renderer/vulkan-renderer/shaders/: CMakeLists.txt  default.frag  default.vert  gradient.comp  sky.comp  triangle.vert
Rune/src/renderer/vulkan-renderer/utils/: CMakeLists.txt  buffers.cc  buffers.hh  defines.hh  descriptors.cc  descriptors.hh  image.cc  image.hh  initializers.cc  initializers.hh  shaders.cc  shaders.hh  vma.cc  vma.hh
Rune/src/utils/: singleton.hh  traits.h  types.hh  vulkan_helpers.hh
demo/: CMakeLists.txt
demo/gl/: CMakeLists.txt
demo/gl/src/: main.cpp
demo/src/: main.cpp
demo/vulkan/: CMakeLists.txt
demo/vulkan/src/: main.cpp
